discussion/kv_engine/141651/141651_rev2_discussion.txt
======================================================================================================================
DESCRIPTION:

WIP:Add code to catch arena mismatches

Change-Id: I0afbfcdeae0a2eef99c5ca229244d7175f10af71

======================================================================================================================
COMMENTS
======================================================================================================================
Author: Scott Lashley
Date: 2020-12-11 15:23:21.000000000
Message: 
Uploaded patch set 2.
----------------------------------------------------------------------------------------------------------------------
Author: Build Bot
Date: 2020-12-11 16:33:16.000000000
Message: 
Patch Set 2: Verified-1

Build Failed 

http://cv.jenkins.couchbase.com/job/kv_engine-windows-master/32523/ : FAILURE

Compile error at ..\kv_engine\engines\ep\src\magma-kvstore\magma-kvstore.cc(501): error C2039: "ThreadCtx": is not a member of "magma::Magma::Config" ( http://cv.jenkins.couchbase.com/job/kv_engine-windows-master/32523/ )

http://cv.jenkins.couchbase.com/job/kv_engine-clang_analyzer-master/28030/ : FAILURE

Compile error at /home/couchbase/jenkins/workspace/kv_engine-clang_analyzer-master/kv_engine/engines/ep/src/magma-kvstore/magma-kvstore.cc:501:28:
error: no member named "ThreadCtx" in "magma::Magma::Config"
 ( http://cv.jenkins.couchbase.com/job/kv_engine-clang_analyzer-master/28030/ )

http://cv.jenkins.couchbase.com/job/kv_engine-clang_tidy/6238/ : FAILURE

clang-tidy found the following problems:

<pre>
/home/couchbase/jenkins/workspace/kv_engine-clang_tidy/kv_engine/engines/ep/src/magma-kvstore/magma-kvstore.cc:501:28: error: no member named "ThreadCtx" in "magma::Magma::Config" [clang-diagnostic-error]
    configuration.magmaCfg.ThreadCtx = ObjectRegistry::getCurrentEngine();
                           ^
/home/couchbase/jenkins/workspace/kv_engine-clang_tidy/kv_engine/engines/ep/src/magma-kvstore/magma-kvstore.cc:502:28: error: no member named "SetupThreadCtx" in "magma::Magma::Config" [clang-diagnostic-error]
    configuration.magmaCfg.SetupThreadCtx =
                           ^
/home/couchbase/jenkins/workspace/kv_engine-clang_tidy/kv_engine/engines/ep/src/magma-kvstore/magma-kvstore.cc:507:28: error: no member named "ResetThreadCtx" in "magma::Magma::Config"; did you mean "ResetThreadContext"? [clang-diagnostic-error]
    configuration.magmaCfg.ResetThreadCtx =
                           ^~~~~~~~~~~~~~
                           ResetThreadContext
/home/couchbase/jenkins/workspace/kv_engine-clang_tidy/magma/include/libmagma/magma.h:712:29: note: "ResetThreadContext" declared here
    ResetThreadLocalContext ResetThreadContext{nullptr};
                            ^

</pre> ( http://cv.jenkins.couchbase.com/job/kv_engine-clang_tidy/6238/ )

Compile error at /home/couchbase/jenkins/workspace/kv_engine-clang_tidy/kv_engine/engines/ep/src/magma-kvstore/magma-kvstore.cc:501:28:
error: no member named "ThreadCtx" in "magma::Magma::Config" [clang-diagnostic-error]
 ( http://cv.jenkins.couchbase.com/job/kv_engine-clang_tidy/6238/ )

http://cv.jenkins.couchbase.com/job/kv_engine.linux/job/master/7834/ : FAILURE

Compile error at [2020-12-11T16:28:04.541Z] ../kv_engine/engines/ep/src/magma-kvstore/magma-kvstore.cc:501:28:
error: ?struct magma::Magma::Config? has no member named ?ThreadCtx?
 ( http://cv.jenkins.couchbase.com/job/kv_engine.linux/job/master/7834/ )

http://cv.jenkins.couchbase.com/job/kv_engine.ASan-UBSan/job/master/15651/ : FAILURE

Compile error at [2020-12-11T16:30:41.691Z] ../kv_engine/engines/ep/src/magma-kvstore/magma-kvstore.cc:501:28:
error: no member named "ThreadCtx" in "magma::Magma::Config"
 ( http://cv.jenkins.couchbase.com/job/kv_engine.ASan-UBSan/job/master/15651/ )

http://cv.jenkins.couchbase.com/job/kv_engine.threadsanitizer/job/master/8107/ : FAILURE

Compile error at [2020-12-11T16:28:41.333Z] ../kv_engine/engines/ep/src/magma-kvstore/magma-kvstore.cc:501:28:
error: no member named "ThreadCtx" in "magma::Magma::Config"
 ( http://cv.jenkins.couchbase.com/job/kv_engine.threadsanitizer/job/master/8107/ )

http://cv.jenkins.couchbase.com/job/kv_engine.macos/job/master/6775/ : FAILURE

Compile error at [2020-12-11T15:44:52.627Z] ../kv_engine/engines/ep/src/magma-kvstore/magma-kvstore.cc:501:28:
error: no member named "ThreadCtx" in "magma::Magma::Config"
 ( http://cv.jenkins.couchbase.com/job/kv_engine.macos/job/master/6775/ )

http://cv.jenkins.couchbase.com/job/kv_engine-clang_format_9/4773/ : SUCCESS

http://cv.jenkins.couchbase.com/job/kv_engine.linux-CE/job/master/7712/ : SUCCESS
----------------------------------------------------------------------------------------------------------------------
Author: Build Bot
Date: 2020-12-14 18:36:17.000000000
Message: 
Patch Set 2:

Build Failed 

http://cv.jenkins.couchbase.com/job/kv_engine.linux/job/master/7862/ : ABORTED

http://cv.jenkins.couchbase.com/job/kv_engine.ASan-UBSan/job/master/15680/ : ABORTED

Build which was aborted due to a newer patch set being uploaded for the given review. ( http://cv.jenkins.couchbase.com/job/kv_engine.ASan-UBSan/job/master/15680/ )

http://cv.jenkins.couchbase.com/job/kv_engine.threadsanitizer/job/master/8136/ : ABORTED

Build which was aborted due to a newer patch set being uploaded for the given review. ( http://cv.jenkins.couchbase.com/job/kv_engine.threadsanitizer/job/master/8136/ )

http://cv.jenkins.couchbase.com/job/kv_engine.macos/job/master/6803/ : FAILURE

Failure of GoogleTest "ObjectRegistryTest.NumItem":

<pre>
[ RUN      ] ObjectRegistryTest.NumItem
[2020-12-14T18:26:28.323Z] unknown file: Failure
[2020-12-14T18:26:28.323Z] C++ exception with description "CouchKVStore::initialize: no vbstate for ./test/2.couch.0" thrown in SetUp().
[2020-12-14T18:26:28.323Z] [  FAILED  ] ObjectRegistryTest.NumItem (6 ms)
ObjectRegistryTest.NumItem
</pre>
 ( http://cv.jenkins.couchbase.com/job/kv_engine.macos/job/master/6803/ )

http://cv.jenkins.couchbase.com/job/kv_engine-windows-master/32555/ : SUCCESS

http://cv.jenkins.couchbase.com/job/kv_engine-clang_format_9/4799/ : SUCCESS

http://cv.jenkins.couchbase.com/job/kv_engine-clang_analyzer-master/28056/ : SUCCESS

http://cv.jenkins.couchbase.com/job/kv_engine-clang_tidy/6264/ : SUCCESS

http://cv.jenkins.couchbase.com/job/kv_engine.linux-CE/job/master/7740/ : SUCCESS
----------------------------------------------------------------------------------------------------------------------
